index.css
body,
html {
    font-family: sans-serif;
    margin: 0;
    height: -webkit-fill-available;
    height: 100vh;
}

.hidden {
    display: none;
}
.btn-close {
    float: right;
    background: none;
    border: none;
    font-size: 32px;
    cursor: pointer;
    line-height: 1;
    padding: 0;
}

.image-container {
    max-width: 300px;
    flex-basis: auto;
    border-radius: 50%;
    overflow: hidden;
    flex-grow: 0;
}

.image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

section {
    height: 100%;
}

section#title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

a {
    text-decoration-line: underline;
    text-decoration-style: dotted;
    text-decoration-thickness: 3px;
    color: white;
}
a:visited {
    color: #aaa;
}

section#title small {
    font-weight: bold;
    font-size: 5vmax;
    text-align: center;
    display: block;
    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
}

p,
ul {
    font-size: 24px;
}

h1 {
    text-transform: uppercase;
    /*font-size: 15vmax;*/
    font-size: clamp(28px, 15vmax, 108px);
    text-align: center;
    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
    margin-bottom: 15px;
    margin-top: 0;
}

h2 {
    font-size: 6vmax;
    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
}

section.slide {
    height: 100%;
}

section.slide h2 {
    display: flex;
    background-color: black;
    margin: 0 auto;
    padding-bottom: 25px;
    padding: clamp(1rem, 5vw, 3rem);
    max-width: 1200px;
    color: white;
    height: 30%;
    flex-direction: column;
    justify-content: end;
}

section.slide p,
section.slide ul {
    max-width: 1200px;
    margin: 22px auto;
    padding-left: clamp(1rem, 5vw, 3rem);
    padding-right: clamp(1rem, 5vw, 3rem);
}

section.slide ul li {
    margin-left: 25px;
}

section#founder .upper-half,
section#founder .bottom-half {
    max-width: 1200px;
    padding-left: clamp(1rem, 5vw, 3rem);
    padding-right: clamp(1rem, 5vw, 3rem);
}

section#founder .upper-half {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: black;
    color: white;
    height: 50%;
}

section#founder .upper-half > * {
    flex-grow: 1;
}

section#founder .upper-half h2 {
    margin-right: 25px;
}

section#founder .upper-half .founder-name {
    font-size: 24px;
    margin-left: 25px;
}

section#founder .bottom-half {
    display: flex;
    flex-direction: row;
    justify-content: left;
    align-items: center;
    height: 50%;
}

section#founder .bottom-half img {
    flex-grow: 1;
    flex-shrink: 1;
    margin-left: 25px;
    height: 100%;
}

section#founder .bottom-half img:first-child {
    margin-left: 0;
}

section.split-slide {
    background: linear-gradient(
        to bottom,
        #000 0%,
        #000 50%,
        #fff 50%,
        #fff 100%
    );
}

section#team {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: -webkit-fill-available;
    height: 100vh;
}
section#team h2 {
    margin-top: 25px;
    color: white;
    padding-left: clamp(1rem, 5vw, 3rem);
    padding-right: clamp(1rem, 5vw, 3rem);
    max-width: 1200px;
}
section#team .teammate {
    border-top: 25px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
section#team .teammate h3,
section#team .teammate span {
    font-size: 24px;
    font-weight: normal;
}
section#team .teammate h3 {
    margin-top: 25px;
}
section#team .teammate span {
    font-weight: bold;
}
section#team .teammate p {
    font-size: 20px;
}
section#team .team-group {
    display: flex;
    flex-direction: row;
}
section#team .teammate .image-container {
    width: 200px;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
}
section#team .teammate img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
section#team .teammate .bio-extended {
    width: 200px;
}

section#podcast {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 100%;
}
section#podcast .sidebar {
    width: 33%;
    background-color: black;
    color: white;
}
section#podcast .sidebar > div {
    padding-left: 25px;
}

section.slide {
    height: -webkit-fill-available;
    height: 100vh;
}

section#podcast .sources {
    height: 100%;
    overflow-y: scroll;
}
section#podcast .sources img {
    max-width: 100%;
}

@media (max-width: 500px) {
    p,
    ul {
        font-size: 21px;
    }

    section#title h1 {
        display: flex;
        font-size: 8vmax;
        height: 50%;
        flex-direction: column;
        justify-content: end;
    }
    section#title small {
        display: block;
        height: 50%;
        background-color: black;
        color: white;
    }

    section.slide h2 {
        height: 20vh;
    }

    section#founder {
        height: initial;
    }
    section#founder .upper-half {
        flex-direction: column;
        padding-top: 25px;
    }
    section#founder .upper-half h2 {
        font-size: 4.5vmax;
        align-self: center;
        margin-right: 0;
        margin-bottom: 25px;
    }
    section#founder .upper-half .image-container {
        margin-bottom: 25px;
    }
    section#founder .bottom-half {
        flex-direction: column;
        height: auto;
        padding-bottom: 25px;
    }
    section#founder .bottom-half img {
        margin-left: 0;
        margin-top: 25px;
        max-height: 200px;
    }

    section#team {
        height: initial;
        padding-bottom: 25px;
    }
    section#team h2 {
        margin-bottom: 25px;
    }
    section#team .team-group {
        overflow-x: scroll;
        padding-left: 25px;
    }
    section#team .teammate {
        margin-right: 50px;
    }
    section#team .teammate a {
        align-self: baseline;
    }
    section#team .teammate button {
        border: 1px solid black;
        background-color: black;
        color: white;
        border-radius: 3px;
        font-size: 21px;
        padding: 5px 10px;
        font-weight: bold;
        margin-top: auto;
    }

    section#podcast {
        flex-direction: column;
        height: initial;
    }
    section#podcast .sidebar {
        width: 100%;
        margin-bottom: 25px;
        padding-top: 25px;
    }
    section#podcast .sidebar > div {
        padding-left: 25px;
        padding-right: 25px;
    }
    section#podcast .sources {
        overflow-y: initial;
    }
    section#podcast .sources img {
        margin-bottom: 25px;
    }
}

